# 3D-graphics-Ferrari

./: Readme.md
Animation/: Readme.md
Animation/UnrealAnimation/: UnrealAnimation.uproject
Animation/UnrealAnimation/Config/: DefaultEngine.ini  DefaultGame.ini
Animation/UnrealAnimation/Content/: Main_Scene.umap  Main_Scene_BuiltData.uasset  Test.uasset
Interactive/: CMakeLists.txt  Readme.md  build.bat  imgui.ini  run.sh
Interactive/2022-2023_F2XGA_Template-main/: .gitignore  CMakeLists.txt  Source.cpp  main.cpp  run.bat  run.sh
Interactive/2022-2023_F2XGA_Template-main/shaders/: fs_model.glsl
Interactive/2022-2023_F2XGA_Template-main/src/: Camera.hpp  Content.cpp  Content.hpp  Debugger.cpp  Debugger.hpp  GLApp.cpp  GLApp.hpp  Model.cpp  Pipeline.cpp  Pipeline.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp
Interactive/2022-2023_F2XGA_Template-main/src/GLApp/: Camera.cpp  Camera.hpp  GLApp.cpp  GLApp.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp
Interactive/Tutorial/: CMakeLists.txt  Readme.md  metadata.yaml
Interactive/assets/: rose.gltf  table.gltf
Interactive/assets/dog/: dog.gltf
Interactive/assets/maxwell/: maxwell.gltf
Interactive/assets/plane/: plane.gltf
Interactive/assets/table/: table.gltf
Interactive/shaders/: framebuffer.frag  framebuffer.vert  fs_model.glsl  pbr_model.frag  pbr_model.vert  plane.frag  plane.vert  unlit_model.frag  unlit_model.vert  vs_model.glsl
Interactive/src/: Scene.cpp  Scene.hpp
Interactive/src/GLApp/: Camera.hpp  Debugger.cpp  Debugger.hpp  GLApp.cpp  (+9 more)
Render/: Readme.md
(+42 files in other folders)
